Fix some layout issues

--- a/src/pages/Bike-Profile-Main.css
+++ b/src/pages/Bike-Profile-Main.css
@@ -88,7 +88,7 @@
     height: 47%;
     /* border-radius: 20px; */
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.25);
-    border: solid;
+    /* border: solid; */
 }
 
 .details {
